--- a/css/index_style.css
+++ b/css/index_style.css
@@ -3,13 +3,13 @@ body
 {
     font-family: 'segoe ui light';
     background-color: #000000f2;
+    
 }
 
 .sidebar{
     display: flex;
     left: 0;
     top: 0;
-   
     height: 100%;
     background-color: white;
     transition: all 0.4s;
@@ -78,17 +78,20 @@ body
     margin: 50px 0px;
 }
 .movie-details{
-    font-weight: 600;
+    
     display: flex;
     position: absolute;
-    
-    
     top: 100%;
-
+    width: 100%;
     height: 100%;
     background-color:  rgba(255, 255, 255, 0.548);
     transition: all 0.8s;
+    border-radius: 4px;
+
 }
+/* .movie-details div h3 , .movie-details div p{
+     font-weight: 800 !important;
+} */
 .movie-poster{
     overflow: hidden;
     
@@ -132,9 +135,8 @@ body
      animation-name: slideUp;
     animation-duration: 0.5s;
     animation-iteration-count: 1;
-    
-   
 }
+
 .text-search{
 
     background-color: transparent;
@@ -154,3 +156,59 @@ body
 .text-search::placeholder{
     text-align: center;
 }
+
+.srearchResults{
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+   
+    width: 95%;
+    margin: 5px auto;
+    background-color: rgba(255, 255, 255, 1);
+    
+    z-index: 99999;
+}
+
+.srearchResults ul{
+    overflow: scroll;
+    overflow-x: hidden;
+  
+}
+.srearchResults ul li {
+    color: rgb(30, 107, 170);
+    font-weight: 900;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    padding: 5px 10px ; 
+}
+.srearchResults ul li:hover{
+    background-color: rgba(57, 135, 199, 0.377);
+    color: black;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px;
+    
+  }
+  #searchRow{
+      background-color:rgba(53, 53, 53, 0.3);
+      color: rgba(255, 255, 255, 1);
+      font-weight: 700;
+  }
+img{
+    border-radius: 4px;
+}
+
+  
